[package]
name = "derive-masked"
version = "0.0.0-alpha.1"
authors = ["okcodes <code@ok.codes>"]
edition = "2021"
categories = ["development-tools::procedural-macro-helpers", "value-formatting"]
description = "Adds #[derive(x)] macros for implementing the Debug and Display traits masking out sensitive fields"
documentation = "https://docs.rs/derive-masked"
include = [
    "/benches/**",
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/examples/**",
    "/tests/**",
]
keywords = [
    "macros",
    "derive",
    "password",
    "redact",
    "sensitive",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/okcodes/derive-masked"
homepage = "https://github.com/okcodes/derive-masked"
rust-version = "1.56"

[dependencies]
quote = "1.0.36"
syn = "2.0.67"

[lib]
proc-macro = true
